Add model max and recommend workflows

--- a/notebooks/01_workflow.ipynb
+++ b/notebooks/01_workflow.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "9dab2324",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "5775a842",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "a97371ac",
    "metadata": {},
    "outputs": [],
@@ -169,19 +169,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "5f7bb755",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.3\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
+     ]
     }
    ],
    "source": [
@@ -202,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "7f5c28a8",
    "metadata": {},
    "outputs": [],
@@ -212,21 +211,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "118ab0e1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/dn/cm037cfs6x91lt40wn_cx_6c0000gn/T/ipykernel_49824/2509143929.py:1: DeprecationWarning: The 'account_id' parameter is deprecated and will be removed in the next release. Fetching account ID from HTTP headers instead.\n",
-      "  client.authenticate(os.environ[\"UE_ACCOUNT_ID\"])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "client.authenticate(os.environ[\"UE_ACCOUNT_ID\"])\n"
+    "client.authenticate()\n"
    ]
   },
   {
@@ -308,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "f705d867",
    "metadata": {},
    "outputs": [
@@ -317,45 +307,71 @@
      "output_type": "stream",
      "text": [
       "{'cache_url': 'redis-13325.c338.eu-west-2-1.ec2.redns.redis-cloud.com',\n",
-      " 'category': 'Basic',\n",
+      " 'category': 'MachineLearningModels',\n",
       " 'cost': 1,\n",
-      " 'description': 'Sum two numbers',\n",
-      " 'id': 'Add',\n",
-      " 'image_name': 'uncertainty-engine-add-node',\n",
-      " 'inputs': {'lhs': {'default': None,\n",
-      "                    'description': 'Left-hand side of the addition',\n",
-      "                    'label': 'LHS',\n",
-      "                    'required': True,\n",
-      "                    'set_in_node': True,\n",
-      "                    'type': 'float'},\n",
-      "            'rhs': {'default': None,\n",
-      "                    'description': 'Right-hand side of the addition',\n",
-      "                    'label': 'RHS',\n",
-      "                    'required': True,\n",
-      "                    'set_in_node': True,\n",
-      "                    'type': 'float'}},\n",
-      " 'label': 'Add',\n",
-      " 'load_balancer_url': 'http://prod-u-uncer-8Dm4BCeDOhUv-2026795141.eu-west-2.elb.amazonaws.com',\n",
-      " 'long_description': 'Add two numbers together',\n",
-      " 'outputs': {'ans': {'description': 'Result of the addition',\n",
-      "                     'label': 'Answer',\n",
-      "                     'type': 'float'}},\n",
-      " 'queue_url': 'https://sqs.eu-west-2.amazonaws.com/939027885851/prod-uncertainty-engine-add-node-uncertaintyengineaddnodeQueueFF3B1-7VhRgceGZMHS',\n",
-      " 'requirements': {'cpu': 256, 'gpu': False, 'memory': 512, 'timeout': 15},\n",
+      " 'description': 'Draw recommended data points from a trained model',\n",
+      " 'id': 'Recommend',\n",
+      " 'image_name': 'uncertainty-engine-recommend-node',\n",
+      " 'inputs': {'acquisition_function': {'default': None,\n",
+      "                                     'description': 'The acquisition function '\n",
+      "                                                    'to use for recommending '\n",
+      "                                                    'points.',\n",
+      "                                     'label': 'Acquisition function',\n",
+      "                                     'required': True,\n",
+      "                                     'set_in_node': True,\n",
+      "                                     'type': 'Literal[\"ExpectedImprovement\", '\n",
+      "                                             '\"LogExpectedImprovement\", '\n",
+      "                                             '\"PosteriorMean\", '\n",
+      "                                             '\"PosteriorStandardDeviation\", '\n",
+      "                                             '\"MonteCarloExpectedImprovement\", '\n",
+      "                                             '\"MonteCarloLogExpectedImprovement\", '\n",
+      "                                             '\"MonteCarloNegativeIntegratedPosteriorVariance\"]'},\n",
+      "            'model': {'default': None,\n",
+      "                      'description': 'Machine-learning model',\n",
+      "                      'label': 'Model',\n",
+      "                      'required': True,\n",
+      "                      'set_in_node': False,\n",
+      "                      'type': 'MachineLearningModel'},\n",
+      "            'number_of_points': {'default': None,\n",
+      "                                 'description': 'The number of points to '\n",
+      "                                                'recommend.',\n",
+      "                                 'label': 'Number of points',\n",
+      "                                 'required': True,\n",
+      "                                 'set_in_node': True,\n",
+      "                                 'type': 'int'}},\n",
+      " 'label': 'Recommend',\n",
+      " 'load_balancer_url': None,\n",
+      " 'long_description': 'Draw recommended data points from a trained model',\n",
+      " 'outputs': {'acquisition_function_value': {'description': 'Acquisition '\n",
+      "                                                           'function value for '\n",
+      "                                                           'the recommended '\n",
+      "                                                           'points',\n",
+      "                                            'label': 'Acquisition function '\n",
+      "                                                     'value',\n",
+      "                                            'type': 'float'},\n",
+      "             'recommended_points': {'description': 'A dataset containing the '\n",
+      "                                                   'recommended points from '\n",
+      "                                                   'the model',\n",
+      "                                    'label': 'Recommended points',\n",
+      "                                    'type': 'CSVDataset'}},\n",
+      " 'queue_url': 'https://sqs.eu-west-2.amazonaws.com/939027885851/prod-uncertainty-engine-recommend-uncertaintyenginerecommendnodeQue-nMjfRgSwsQTM',\n",
+      " 'requirements': {'cpu': 8192, 'gpu': False, 'memory': 16384, 'timeout': 1200},\n",
+      " 'service_arn': 'arn:aws:ecs:eu-west-2:939027885851:service/ue_prod/uncertainty-engine-recommend-node',\n",
       " 'version_base_image': 2,\n",
-      " 'version_node': 3,\n",
-      " 'version_types_lib': '0.4.0'}\n"
+      " 'version_node': 0,\n",
+      " 'version_types_lib': '0.9.0'}\n"
      ]
     }
    ],
    "source": [
+    "from pprint import pprint\n",
     "def get_node_info(node_name):\n",
     "    nodes = client.list_nodes()\n",
     "    nodes_by_id = {node[\"id\"]: node for node in nodes}\n",
     "    # Print the details of the node\n",
     "    pprint(nodes_by_id[node_name])\n",
     "    \n",
-    "get_node_info('Add')"
+    "get_node_info('Recommend')"
    ]
   },
   {
